Intégration du template single_photo

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,5 @@
 @import "base/fonts.css";
+@import "sections/body.css";
 @import "sections/header.css";
 @import "sections/footer.css";
 @import "sections/modale.css";
