--- a/styles/sections/footer.css
+++ b/styles/sections/footer.css
@@ -1,12 +1,15 @@
+/* Styles pour le footer */
 footer {
   display: flex;
   justify-content: center;
   border-top: 1px solid black;
+  padding: 20px 0;
 }
 
 footer a {
-  padding: 0 50px 0 50px;
+  padding: 0 20px;
 }
+
 #menu-footer {
   display: flex;
   flex-direction: row;
@@ -16,7 +19,7 @@ footer a {
 }
 
 footer li {
-  padding-top: 23px;
+  padding: 15px 20px;
 }
 
 /* Styles pour la version mobile */
@@ -24,7 +27,9 @@ footer li {
   #menu-footer {
     flex-direction: column;
   }
+
+  footer a,
   footer li {
-    padding-bottom: 23px;
+    padding: 10px 0;
   }
 }
