--- a/styles/sections/modale.css
+++ b/styles/sections/modale.css
@@ -1,12 +1,16 @@
+/*Modale*/
+/* Fond modale */
 .bg_modale {
   position: fixed;
   z-index: 99;
-  background: rgb(2 2 2 / 61%);
+  background: #00000099;
   width: 100%;
   height: 100%;
   top: 0;
   display: none;
 }
+
+/* Conteneur modale */
 .modale {
   position: absolute;
   left: 0;
@@ -21,6 +25,7 @@
   background-color: white;
 }
 
+/* Contenu modale */
 .modale-content {
   display: flex;
   justify-content: center;
@@ -29,6 +34,7 @@
   background-color: white;
 }
 
+/* Image modale */
 .img-modale {
   display: flex;
   justify-content: center;
@@ -40,6 +46,7 @@
   background-repeat: no-repeat;
 }
 
+/* Styles pour les formulaires */
 label,
 input[type="submit" i] {
   font-family: "Poppins", sans-serif;
@@ -57,15 +64,18 @@ input[type="submit" i] {
 input {
   border-radius: 8px;
   width: 263px;
-  height: 40px;
+  padding: 20px 4px;
   border: 1px solid #b8bbc2;
+  margin-bottom: 10px;
 }
 textarea {
   width: 263px;
+  padding: 20px 4px;
   border-radius: 8px;
   border: 1px solid #b8bbc2;
 }
 
+/* Formulaire Contact 7 */
 .wpcf7-form {
   display: flex;
   flex-direction: column;
@@ -76,20 +86,22 @@ textarea {
   display: none;
 }
 
+/* Bouton d'envoi du formulaire */
 input[type="submit" i] {
   height: 50px;
   width: 263px;
-  background-color: #d8d8d8;
+  background-color: var(--Button);
   border-radius: 0;
   box-shadow: 0px 0px 1px 0px black;
   border: none;
 }
 
 input[type="submit" i]:hover {
-  background-color: black;
+  background-color: var(--Button-hover);
   color: white;
 }
 
+/* Messages de validation ou d'erreur */
 .wpcf7-not-valid-tip,
 .wpcf7 form.sent .wpcf7-response-output,
 .wpcf7 form.invalid .wpcf7-response-output {
