--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,9 +1,68 @@
+/* Import des fichiers CSS */
 @import "base/fonts.css";
-@import "sections/body.css";
 @import "sections/header.css";
 @import "sections/footer.css";
 @import "sections/modale.css";
+@import "templates/banner.css";
+@import "sections/catalogue_photo.css";
 
+/* Variables de couleur */
+:root {
+  --Color-hover: #ffd6d6;
+  --Color-Selected: #e00000;
+  --Color-Pressing: #fe5858;
+  --Color-default: #ffffff;
+  --Button-hover: #000000;
+  --Button: #d8d8d8;
+}
+
+/* Réinitialisation des styles de base */
 * {
   font-family: "SpaceMono", sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: auto;
+}
+
+.titre_lien {
+  display: none;
+}
+
+p {
+  margin-bottom: 15px;
+  font-family: "PoppinsRegular";
+  font-size: 14px;
+}
+
+h1 {
+  padding: 10px;
+  font-weight: 700;
+  font-style: italic;
+  font-size: 96px;
+}
+
+h2 {
+  font-weight: 400;
+  font-size: 66px;
+  font-style: italic;
+}
+
+h3 {
+  font-weight: 400;
+  font-size: 18px;
+  font-style: normal;
+}
+
+/* Media Query pour les écrans larges */
+@media (max-width: 767px) {
+  h1 {
+    font-size: 27.59px;
+  }
+
+  h2 {
+    font-size: 46px;
+  }
 }
