Intégration de la zone photos apparentées

--- a/styles/sections/catalogue_photo.css
+++ b/styles/sections/catalogue_photo.css
@@ -11,6 +11,11 @@
   height: 100%;
 }
 
+.containerPhoto:hover,
+.photo-overlay:hover {
+  background-color: #00000099;
+}
+
 .containerPhoto img {
   width: 100%;
   height: auto;
@@ -18,6 +23,10 @@
   object-fit: cover;
 }
 
+.containerPhoto img:hover,
+.photo-image:hover {
+  opacity: 0.5;
+}
 .entry-content {
   width: 564px;
   text-align: left;
@@ -69,7 +78,8 @@
 }
 
 #boutonContact:hover,
-#button_card_photos:hover {
+#button_card_photos:hover,
+#button_card_photos:hover a {
   background-color: var(--Button-hover);
   color: var(--Color-default);
 }
@@ -127,8 +137,6 @@
 }
 
 #button_card_photos {
-  font-size: 12px;
-  font-weight: 400;
   padding: 8px 15px;
   width: 272px;
   height: 50px;
@@ -137,4 +145,89 @@
   background-color: var(--Button);
   box-shadow: 0px 0px 1px 0px black;
   margin: auto;
+}
+
+#button_card_photos a {
+  font-size: 12px;
+  font-weight: 400;
+  text-decoration: none;
+  color: black;
+}
+
+.card_photos {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-evenly;
+  margin-bottom: 20px;
+}
+
+.photo-block {
+  width: 564px;
+  height: 495px;
+  margin-bottom: 30px;
+}
+
+.photo-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.photo-title {
+  font-size: 14px;
+  font-weight: 500;
+  color: white;
+  font-family: "PoppinsRegular";
+  position: relative;
+  left: 10px;
+  top: 467px;
+  display: none;
+}
+
+.photo-categorie {
+  font-size: 14px;
+  color: white;
+  position: relative;
+  left: 487px;
+  top: 449px;
+  display: none;
+  width: 14%;
+}
+
+.eye-link {
+  position: relative;
+  left: 46%;
+  top: 25vh;
+  width: 50%;
+  display: none;
+}
+
+.fullscreen-icon {
+  position: relative;
+  bottom: 66px;
+  left: 520px;
+  width: 7%;
+  cursor: pointer;
+  display: none;
+}
+
+.photo-overlay {
+  z-index: 1;
+  position: relative;
+  left: 0;
+  bottom: 501px;
+  width: 100%;
+  height: 100%;
+}
+
+.photo-block:hover .photo-title,
+.photo-block:hover .photo-categorie,
+.photo-block:hover .eye-link,
+.photo-block:hover .fullscreen-icon {
+  display: block;
+}
+
+.notPhoto {
+  color: red;
 }
