--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,7 @@
 @import "sections/footer.css";
 @import "sections/modale.css";
 @import "templates/banner.css";
+@import "templates/galerie.css";
 @import "sections/catalogue_photo.css";
 
 /* Variables de couleur */
