--- a/styles/templates/galerie.css
+++ b/styles/templates/galerie.css
@@ -6,3 +6,23 @@
   margin-top: 50px;
   gap: 10px;
 }
+
+#btnchargPlus {
+  width: 100%;
+}
+
+#imagePlus {
+  display: block;
+  width: 272px;
+  height: 50px;
+  font-family: "SpaceMono";
+  font-weight: 400;
+  font-size: 12px;
+  border-radius: 2px;
+  padding: 8px 15px;
+  border: none;
+  margin: auto;
+  margin-top: 3%;
+  margin-bottom: 3%;
+  background-color: var(--Button);
+}
