--- a/styles/base/fonts.css
+++ b/styles/base/fonts.css
@@ -6,7 +6,7 @@
 }
 
 @font-face {
-  font-family: "Poppins";
+  font-family: "Poppins_regular";
   src: url("../fonts/Poppins-Medium.ttf") format("truetype");
   font-style: normal;
   font-weight: 500;
@@ -20,21 +20,21 @@
 }
 
 @font-face {
-  font-family: "SpaceMono";
+  font-family: "SpaceMono_italic";
   src: url("../fonts/SpaceMono-Italic.ttf") format("truetype");
   font-style: italic;
   font-weight: 400;
 }
 
 @font-face {
-  font-family: "SpaceMono";
+  font-family: "SpaceMono_regular";
   src: url("../fonts/SpaceMono-Bold.ttf") format("truetype");
   font-style: normal;
   font-weight: 700;
 }
 
 @font-face {
-  font-family: "SpaceMono";
+  font-family: "SpaceMono_regular_italic";
   src: url("../fonts/SpaceMono-BoldItalic.ttf") format("truetype");
   font-style: italic;
   font-weight: 700;
