--- a/styles/sections/catalogue_photo.css
+++ b/styles/sections/catalogue_photo.css
@@ -11,7 +11,6 @@
   height: 100%;
 }
 
-.containerPhoto:hover,
 .photo-overlay:hover {
   background-color: #00000099;
 }
@@ -23,7 +22,6 @@
   object-fit: cover;
 }
 
-.containerPhoto img:hover,
 .photo-image:hover {
   opacity: 0.5;
 }
@@ -70,7 +68,7 @@
   padding: 8px 15px;
   width: 272px;
   height: 50px;
-  margin-left: 137px;
+  margin-left: 92px;
   border-radius: 2px;
   border: none;
   background-color: var(--Button);
@@ -79,7 +77,8 @@
 
 #boutonContact:hover,
 #button_card_photos:hover,
-#button_card_photos:hover a {
+#button_card_photos:hover a,
+#imagePlus:hover {
   background-color: var(--Button-hover);
   color: var(--Color-default);
 }
@@ -92,11 +91,11 @@
 .navContact {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
   align-content: center;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid black;
+  height: 118px;
 }
 
 .likePhotos h3 {
@@ -177,7 +176,7 @@
   font-size: 14px;
   font-weight: 500;
   color: white;
-  font-family: "PoppinsRegular";
+  font-family: "Poppins_regular";
   position: relative;
   left: 10px;
   top: 467px;
