--- a/styles/sections/catalogue_photo.css
+++ b/styles/sections/catalogue_photo.css
@@ -73,6 +73,7 @@
   border: none;
   background-color: var(--Button);
   box-shadow: 0px 0px 1px 0px black;
+  transition: background-color 0.3s ease;
 }
 
 #boutonContact:hover,
@@ -144,6 +145,7 @@
   background-color: var(--Button);
   box-shadow: 0px 0px 1px 0px black;
   margin: auto;
+  transition: background-color 0.3s ease;
 }
 
 #button_card_photos a {
@@ -151,6 +153,7 @@
   font-weight: 400;
   text-decoration: none;
   color: black;
+  transition: background-color 0.3s ease;
 }
 
 .card_photos {
@@ -218,6 +221,7 @@
   bottom: 501px;
   width: 100%;
   height: 100%;
+  transition: background-color 0.3s ease;
 }
 
 .photo-block:hover .photo-title,
