--- a/styles/sections/lightbox.css
+++ b/styles/sections/lightbox.css
@@ -1,7 +1,7 @@
 .lightboxContainer {
   position: fixed;
   z-index: 99;
-  background: black;
+  background: #000000d1;
   width: 100%;
   height: 100%;
   top: 0;
@@ -38,7 +38,7 @@
   position: absolute;
   text-transform: uppercase;
   z-index: 1;
-  bottom: 110px;
+  bottom: 21px;
   right: 482px;
   color: #fff;
 }
@@ -51,7 +51,7 @@
   position: absolute;
   text-transform: uppercase;
   z-index: 1;
-  bottom: 110px;
+  bottom: 21px;
   left: 482px;
   color: #fff;
   width: 170px;
@@ -79,4 +79,28 @@
   top: 83px;
   right: 23%;
   cursor: pointer;
+}
+
+@media (max-width: 836px) {
+  .lightboxNext {
+    top: 93%;
+    right: 35%;
+  }
+  .lightboxPrevious {
+    top: 93%;
+    left: 35%;
+  }
+
+  .lightboxReference {
+    left: 70%;
+  }
+
+  .lightboxCategory {
+    right: 70%;
+  }
+
+  .closeLightbox {
+    top: 53px;
+    right: 8%;
+  }
 }
