--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@
 @import "templates/banner.css";
 @import "templates/dropdown.css";
 @import "templates/galerie.css";
+@import "templates/pages.css";
 
 /* Variables de couleur */
 :root {
