--- a/styles/sections/lightbox.css
+++ b/styles/sections/lightbox.css
@@ -1,7 +1,7 @@
 .lightboxContainer {
   position: fixed;
   z-index: 99;
-  background: #000000d4;
+  background: #000000d1 80%;
   width: 100%;
   height: 100%;
   top: 0;
