--- a/styles/sections/modale.css
+++ b/styles/sections/modale.css
@@ -3,7 +3,7 @@
 .bg_modale {
   position: fixed;
   z-index: 99;
-  background: #000000d4;
+  background: #000000d1 80%;
   width: 100%;
   height: 100%;
   top: 0;
