--- a/styles/sections/catalogue_photo.css
+++ b/styles/sections/catalogue_photo.css
@@ -26,7 +26,7 @@
   opacity: 0.5;
 }
 .entry-content {
-  width: 564px;
+  width: 50%;
   text-align: left;
   border-bottom: solid black 1px;
   padding-bottom: 40px;
@@ -51,7 +51,7 @@
   display: flex;
   flex-direction: row-reverse;
   align-items: flex-end;
-  justify-content: space-between;
+  gap: 50px;
   width: 100%;
 }
 
@@ -103,6 +103,7 @@
   text-transform: uppercase;
   padding-top: 70px;
   padding-bottom: 30px;
+  text-align: left;
 }
 
 .navigationPhoto {
@@ -143,6 +144,7 @@
   box-shadow: 0px 0px 1px 0px black;
   margin: auto;
   transition: background-color 0.3s ease;
+  display: block;
 }
 
 #button_card_photos a {
@@ -238,12 +240,50 @@
     padding-bottom: 10px;
   }
 
-  .entry-content {
-    width: 297px;
-  }
-
   .entry-content h2 {
     width: 307px;
     font-size: 38px;
+  }
+}
+
+@media (max-width: 800px) {
+  .containerPhoto,
+  .entry-content {
+    width: 100%;
+  }
+  .infoPhoto {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .entry-content h2 {
+    font-size: 46px;
+  }
+
+  .navContact {
+    flex-direction: column;
+    height: 150px;
+  }
+
+  .contact {
+    flex-direction: column;
+    text-align: left;
+  }
+
+  #boutonContact {
+    margin-left: 0;
+  }
+
+  .navigationPhoto {
+    display: none;
+  }
+
+  .likePhotos h3 {
+    text-align: center;
+    padding-top: 30px;
+  }
+
+  #button_card_photos {
+    display: none;
   }
 }
